# music_box_converter

./: .gitignore  C.mid  Cargo.toml  README.md  box.json  boxes.json  meg_wiwauf_laminat1.mid  meg_wiwauf_laminat1ohneakk.mid  midi_out.mid  settings.json  svg_settings.json
lang/: de-DE.json  en-GB.json
src/: arguments.rs  command.rs  error.rs  lang.rs  main.rs  path.rs  prelude.rs  settings.rs  settings_new.rs
src/music/: mod.rs
src/music/event/: functions.rs  mod.rs
src/music/meta_information/: functions.rs  mod.rs
src/music/music_box/: functions.rs  mod.rs
src/music/note/: functions.rs  mod.rs
src/music/track/: functions.rs  mod.rs
src/music_box_config/: area.rs  command.rs  config_groups.rs  config_macro.rs  functions.rs  key_handler.rs  mod.rs  state.rs  ui.rs
src/music_box_config/item_list/: mod.rs  settings_item.rs  settings_item_list.rs  value.rs
src/music_box_config/ui/: mod.rs  ui_groups.rs  ui_macro.rs
src/music_box_convert/: command.rs  functions.rs  mod.rs
src/music_box_converter/: functions.rs  mod.rs
src/settings/: mod.rs  svg.rs
src/svg/: document.rs  mod.rs
src/svg/circle/: builder.rs  mod.rs
src/svg_writer/: document.rs  mod.rs
src/svg_writer/circle/: builder.rs
src/svg_writer/line/: builder.rs  mod.rs
src/vec2/: functions.rs  mod.rs
tools/reflect/reflect_derive/: Cargo.toml
tools/reflect/reflect_derive/src/: lib.rs
tools/reflect/src/: lib.rs
tools/sort_trans/: Cargo.toml
tools/sort_trans/src/: main.rs
