[package]
name = "music_box_converter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.4.11"
midly = "0.5.3"
serde = "1.0.193"
serde_derive = "1.0.193"
serde_json = "1.0.108"
thiserror = "1.0.50"
simplelog = { version = "0.12.0", features = ["paris"] }
